Changed Wlater to Walter

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <br/>
 <p>"Has your condition worsened? You medical condition, has it grown worse? Is there a ringing in your ears, are you seeing bright lights or hearing voices?"</p>
 <br/>
-<p>"What does a man do, Wlater? A man provides for his family. And he does it, even when he is not appreciated, or respected, or even loved. He simply bares up and he does it, because he is a man."</p>
+<p>"What does a man do, Walter? A man provides for his family. And he does it, even when he is not appreciated, or respected, or even loved. He simply bares up and he does it, because he is a man."</p>
 <br/>
 <p>"I will kill your wife, I will kill your son, I will kill your infant daughter."</p>
 <br/>
